@@ -1,5 +1,10 @@
 {{$NEXT}}
 
+- Use IPC::Run3 instead of Capture::Tiny for all tests. This fixes an issue
+  with the `tap-bug-in-test2.t` on Windows. Reported by Alexandr Ciornii and
+  further diagnosed by Phil M. Perry. RT #129294.
+
+
 0.07     2019-04-21
 
 - Reverted back to using the Warning event type, since the bug in the Test2
